--- a/docs/docs/introduction/getting-started.mdx
+++ b/docs/docs/introduction/getting-started.mdx
@@ -3,11 +3,15 @@ title: Getting started
 sidebar_position: 1
 ---
 
-Drayman is a server-side component framework. It means that browser only renders **what user should see** - all logic and calculations happen **server-side**. For displaying UI, you can use any available **HTML element, web component or custom Drayman third-party component**. Both worlds - server-side and front-end code is managed inside a **single script**.
+Drayman is a server-side component framework.
+
+- Browser only renders **what user should see** - all logic and calculations happen **server-side**.
+- For displaying UI, you can use any available **HTML element, web component or custom Drayman third-party component**.
+- Both worlds - server-side and front-end code is managed inside a **single script**.
 
 Let's discover **Drayman in less than 5 minutes**.
 
-<!-- Drayman is 
+<!-- Drayman is
 
 ## Prerequisites
 These docs assume that you are familiar with such things as:
