--- a/docs/docs/introduction/getting-started.mdx
+++ b/docs/docs/introduction/getting-started.mdx
@@ -33,6 +33,6 @@ Website will be available at [http://localhost:3033](http://localhost:3033).
 
 ## CodeSandbox
 
-You can also **try Drayman immediately** inside **[CodeSandbox](https://codesandbox.io/s/github/Claviz/drayman/tree/main/packages/framework-examples/drayman-framework-example?file=/src/components/home.tsx)**.
+You can also **try Drayman immediately** inside CodeSandbox by visiting [new.drayman.io](http://new.drayman.io).
 
 Open `src/components/home.tsx` and edit some lines: the site **reloads automatically** and displays your changes.
