--- a/docs/docs/introduction/getting-started.mdx
+++ b/docs/docs/introduction/getting-started.mdx
@@ -5,7 +5,7 @@ sidebar_position: 1
 
 Drayman is a server-side component framework.
 
-- Browser only renders **what user should see** - all logic and calculations happen **server-side**.
+- The browser only renders **what the user should see** - all logic and calculations happen **server-side**.
 - For displaying UI, you can use any available **HTML element, web component or custom Drayman third-party component**.
 - Both worlds - server-side and front-end code is managed inside a **single script**.
 
@@ -21,7 +21,7 @@ These docs assume that you are familiar with such things as:
 
 ## Installing locally
 
-Best way to start building with Drayman and use latest version available is to run:
+The best way to start building with Drayman and use the latest version available is to run:
 
 ```shell
 npx @drayman/framework-init@latest my-app
@@ -29,7 +29,7 @@ cd my-app
 npm start
 ```
 
-Website will be available at [http://localhost:3033](http://localhost:3033).
+The website will be available at [http://localhost:3033](http://localhost:3033).
 
 ## CodeSandbox
 
