Add ComponentInstance helper object; update docs.

--- a/docs/docs/components-in-depth/helpers/the-event-hub-object.mdx
+++ b/docs/docs/components-in-depth/helpers/the-event-hub-object.mdx
@@ -3,7 +3,7 @@ title: The EventHub object
 sidebar_position: 5
 ---
 
-The EventHub object can be used to create a real-time communication between components.
+The `EventHub` object can be used to create a real-time communication between components.
 
 ## EventHub methods
 
