--- a/docs/docs/components-in-depth/component-lifecycle.mdx
+++ b/docs/docs/components-in-depth/component-lifecycle.mdx
@@ -8,7 +8,14 @@ To see how component is handled by Drayman, let's take for example, a component 
 ```tsx title="src/components/home.tsx"
 import fs from "fs/promises";
 
-export const component: DraymanComponent = async ({ forceUpdate }) => {
+export const component: DraymanComponent = async ({
+  forceUpdate,
+  ComponentInstance,
+}) => {
+  ComponentInstance.onDestroy = () => {
+    console.log(`Component instance was destroyed!`);
+  };
+
   const files = ["", ...(await fs.readdir("."))];
   let selectedFileContent: string;
 
@@ -39,4 +46,4 @@ When user visits a page with this component here is what happens:
 - A data returned by **render** function is what user actually sees on the page. This function, in turn, gets called each time a `forceUpdate` function gets called (you can read about `forceUpdate` in detail [here](./helpers/force-update)). To show initial result to user, `forceUpdate` is executed and user's browser receives instructions of what should be rendered on page.
 - Next steps of component lifecycle are decided by user.
   - If user selects some option, an `onchange` event gets triggered on `select` element. In our component this event reads file contents and calls `forceUpdate` function. As described before, `forceUpdate` function calls **render** function behind the scenes and user receives a new representation of component.
-  - If user decides to close a page with component or component disappears from DOM, a component instance with **render** function gets destroyed.
+  - If user decides to close a page with component or component disappears from DOM, `onDestroy` method of the [ComponentInstance](./helpers/the-component-instance-object) gets called printing `Component instance was destroyed!` message to the console and component instance with **render** function gets destroyed.
