--- a/docs/docs/introduction/getting-started.mdx
+++ b/docs/docs/introduction/getting-started.mdx
@@ -21,7 +21,7 @@ These docs assume that you are familiar with such things as:
 
 ## Installing locally
 
-The best way to start building with Drayman and use the latest version available is to run:
+To start building with Drayman and use the latest version available you'll need to run:
 
 ```shell
 npx @drayman/framework-init@latest my-app
@@ -30,9 +30,3 @@ npm start
 ```
 
 The website will be available at [http://localhost:3033](http://localhost:3033).
-
-## CodeSandbox
-
-You can also **try Drayman immediately** inside CodeSandbox by visiting [new.drayman.io](http://new.drayman.io).
-
-Open `src/components/home.tsx` and edit some lines: the site **reloads automatically** and displays your changes.
