--- a/docs/docs/web-components/drayman-elements.mdx
+++ b/docs/docs/web-components/drayman-elements.mdx
@@ -3,7 +3,7 @@ title: "@drayman/elements"
 sidebar_position: 2
 ---
 
-[@drayman/elements](https://drayman-elements.netlify.app/) is an official collection of [Web Components](./using-web-components) compatible with Drayman.
+[@drayman/elements](https://drayman-elements.netlify.app/) is an official collection of [Web Components](./web-components-in-drayman) compatible with Drayman.
 
 - [Docs](https://drayman-elements.netlify.app)
 - [GitHub repo](https://github.com/Claviz/drayman-elements)
