--- a/docs/docs/interactive-examples/file-viewer.mdx
+++ b/docs/docs/interactive-examples/file-viewer.mdx
@@ -6,8 +6,17 @@ sidebar_position: 1
 This example shows how to create a Drayman component which displays a file from file system. You can check a guide about it [here](/blog/getting-started-with-drayman).
 
 <iframe
-  frameborder="0"
-  width="100%"
-  height="800px"
-  src="https://replit.com/@jansivans/File-viewer?embed=true"
+  style={{
+    width: "100%",
+    height: 900,
+    outline: "1px solid #252525",
+    border: 0,
+    borderRadius: 8,
+    marginBottom: 16,
+    zIndex: 100,
+    width: "100%",
+    height: "500px",
+  }}
+  src="https://codesandbox.io/p/sandbox/drayman-framework-v943ig?file=/src/components/home.tsx&embed=1"
+  allowfullscreen
 ></iframe>
