--- a/docs/docs/introduction/getting-started.mdx
+++ b/docs/docs/introduction/getting-started.mdx
@@ -31,6 +31,8 @@ npm start
 
 The website will be available at [http://localhost:3033](http://localhost:3033).
 
-## Online IDE
+## CodeSandbox
 
-You can play around with Drayman using [repl.it here](https://replit.com/@jansivans/Drayman-Framework).
+You can also **try Drayman immediately** inside CodeSandbox by visiting [this URL](https://codesandbox.io/p/sandbox/drayman-framework-v943ig?file=/src/components/home.tsx).
+
+Open `src/components/home.tsx` and edit some lines: the site **reloads automatically** and displays your changes.
