--- a/docs/blog/2021-08-17-getting-started-with-drayman.mdx
+++ b/docs/blog/2021-08-17-getting-started-with-drayman.mdx
@@ -7,7 +7,7 @@ author_image_url: https://avatars.githubusercontent.com/u/5667073?v=4
 tags: [drayman, node, typescript, javascript, jsx, guide]
 ---
 
-[Drayman](http://www.drayman.io) is a server-side component framework that allows you to use any available HTML element, web component or custom Drayman third-party component together with server-side code in a single script.
+[Drayman](https://www.drayman.io) is a server-side component framework that allows you to use any available HTML element, web component or custom Drayman third-party component together with server-side code in a single script.
 
 With Drayman, the browser only renders what the user should see - all logic and calculations happen server-side and UI is written using JSX syntax.
 
@@ -84,7 +84,7 @@ Right now our component is only showing some elements without any interactivity.
 
 ### Reacting to user actions
 
-We need to remember which file the user has selected to show its contents. It can be done by using the `onchange` event attribute and attaching a function that will be [executed server-side](http://www.drayman.io/docs/components-in-depth/handling-events). We also need to add the `value` attribute to each `option` so that `select` would know which option was selected.
+We need to remember which file the user has selected to show its contents. It can be done by using the `onchange` event attribute and attaching a function that will be [executed server-side](https://www.drayman.io/docs/components-in-depth/handling-events). We also need to add the `value` attribute to each `option` so that `select` would know which option was selected.
 
 Let's also add the `fs.readFile` function inside the `<pre>` tag so that Drayman would read file contents during re-render. We won't show the `pre` until a file is actually selected:
 
@@ -121,7 +121,7 @@ export const component: DraymanComponent = async () => {
 };
 ```
 
-If you make a selection from the dropdown, you will see that nothing happens on the page - file contents don't appear. That is because with Drayman you must strictly tell when a component needs to be re-rendered. It can be done by using a special [helper function](http://www.drayman.io/docs/components-in-depth/helpers/introduction) `forceUpdate`.
+If you make a selection from the dropdown, you will see that nothing happens on the page - file contents don't appear. That is because with Drayman you must strictly tell when a component needs to be re-rendered. It can be done by using a special [helper function](https://www.drayman.io/docs/components-in-depth/helpers/introduction) `forceUpdate`.
 
 Import it and add to the `onchange` event after the selected file was saved:
 
@@ -165,4 +165,4 @@ Now our component is complete and file contents are shown on select:
 
 We have built a component that combines server-side logic and client-side view in a single script.
 
-If this felt interesting to you, visit the [official docs](http://www.drayman.io/) to deep-dive into Drayman framework!
+If this felt interesting to you, visit the [official docs](https://www.drayman.io/) to deep-dive into Drayman framework!
